--- a/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -10,6 +10,9 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_enable_game_launch
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_code
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_provider
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image
@@ -22,13 +25,10 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_background_color
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_label_color
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_product_label
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_enable_game_launch
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_code
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_provider
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_use_game_loader
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_status
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_title
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_unpublish_date
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_use_game_loader
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability
   module:
     - color_field
@@ -47,14 +47,14 @@ bundle: webcomposer_slider_v2_entity
 mode: default
 content:
   field_banner_blurb:
-    weight: 6
+    weight: 7
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_banner_image:
-    weight: 3
+    weight: 4
     label: above
     settings:
       image_style: ''
@@ -63,7 +63,7 @@ content:
     type: image
     region: content
   field_banner_image_landscape:
-    weight: 22
+    weight: 21
     label: above
     settings:
       image_style: ''
@@ -72,7 +72,7 @@ content:
     type: image
     region: content
   field_banner_link:
-    weight: 4
+    weight: 5
     label: above
     settings:
       trim_length: 80
@@ -84,21 +84,21 @@ content:
     type: link
     region: content
   field_banner_link_target:
-    weight: 5
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_content_position:
-    weight: 7
+    weight: 8
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_disable_in_tablet:
-    weight: 20
+    weight: 17
     label: above
     settings:
       format: default
@@ -106,6 +106,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_game_code:
+    weight: 24
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_launching:
     weight: 16
@@ -115,8 +123,15 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_game_provider:
+    weight: 25
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_log_in_state:
-    weight: 2
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -139,7 +154,7 @@ content:
     type: image
     region: content
   field_post_banner_image_landscap:
-    weight: 23
+    weight: 22
     label: above
     settings:
       image_style: ''
@@ -190,7 +205,7 @@ content:
     type: entity_reference_label
     region: content
   field_preview_display_only:
-    weight: 19
+    weight: 16
     label: above
     settings:
       format: default
@@ -200,7 +215,7 @@ content:
     type: boolean
     region: content
   field_publish_date:
-    weight: 8
+    weight: 9
     label: above
     settings:
       format_type: medium
@@ -209,7 +224,7 @@ content:
     type: datetime_default
     region: content
   field_ribbon_background_color:
-    weight: 21
+    weight: 18
     label: above
     settings:
       format: hex
@@ -218,7 +233,7 @@ content:
     type: color_field_formatter_text
     region: content
   field_ribbon_label_color:
-    weight: 22
+    weight: 20
     label: above
     settings:
       format: hex
@@ -233,30 +248,15 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_slider_game_code:
-    type: string
-    weight: 24
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_slider_game_provider:
-    type: list_default
-    weight: 25
-    region: content
-    label: above
-    settings: {  }
-    third_party_settings: {  }
   field_status:
-    weight: 21
+    weight: 19
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_title:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -264,7 +264,7 @@ content:
     type: string
     region: content
   field_unpublish_date:
-    weight: 9
+    weight: 10
     label: above
     settings:
       format_type: medium
@@ -282,7 +282,7 @@ content:
   name:
     label: above
     type: string
-    weight: -4
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -290,11 +290,11 @@ content:
   user_id:
     label: hidden
     type: author
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_slider_enable_game_launch: true
-  field_slider_use_game_loader: true
+  field_enable_game_launch: true
+  field_use_game_loader: true
   langcode: true
