--- a/web/sites/mobile-lottery/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-lottery/config/sync/core.entity_view_display.node.games.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.games.field_maintenance_blurb
     - field.field.node.games.field_maintenance_end_date
     - field.field.node.games.field_maintenance_start_date
+    - field.field.node.games.field_native_app
     - field.field.node.games.field_target
     - field.field.node.games.field_use_game_loader
     - node.type.games
@@ -124,6 +125,16 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_native_app:
+    weight: 111
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_target:
     weight: 104
