--- a/web/sites/mobile-virtuals/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-virtuals/config/sync/core.entity_view_display.node.games.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.games.field_maintenance_blurb
     - field.field.node.games.field_maintenance_end_date
     - field.field.node.games.field_maintenance_start_date
+    - field.field.node.games.field_native_app
     - field.field.node.games.field_redirection_inner_page
     - field.field.node.games.field_select_game_tile_action
     - field.field.node.games.field_target
@@ -135,6 +136,16 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_native_app:
+    weight: 114
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_redirection_inner_page:
     weight: 113
