Log messages to file

--- a/web/modules/custom/webcomposer_monolog/webcomposer_monolog.services.yml
+++ b/web/modules/custom/webcomposer_monolog/webcomposer_monolog.services.yml
@@ -1,7 +1,7 @@
 parameters:
   monolog.channel_handlers:
-    default: ['file', 'drupal.dblog']
-    php: ['file', 'drupal.dblog']
+    default: ['file', 'syslog']
+    php: ['file', 'syslog']
 
 services:
   monolog.handler.file:
