--- a/web/sites/mobile-entrypage/config/sync/core.extension.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.extension.yml
@@ -23,6 +23,7 @@ module:
   contextual: 0
   ctools: 0
   datetime: 0
+  dblog: 0
   devel: 0
   draggableviews: 0
   dynamic_page_cache: 0
@@ -58,6 +59,7 @@ module:
   mobile_promotions: 0
   mobile_sponsor_list: 0
   mobile_sponsor_list_v2: 0
+  monolog: 0
   node: 0
   options: 0
   paragraphs: 0
@@ -102,6 +104,7 @@ module:
   webcomposer_lightbox: 0
   webcomposer_mailer: 0
   webcomposer_marketing_script: 0
+  webcomposer_monolog: 0
   webcomposer_registration_landing_page: 0
   webcomposer_replicate_utility: 0
   webcomposer_rest_extra: 0
