core extension updated

--- a/web/sites/mobile-entrypage/config/sync/core.extension.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.extension.yml
@@ -23,7 +23,7 @@ module:
   contextual: 0
   ctools: 0
   datetime: 0
-  dblog: 0
+  syslog: 0
   devel: 0
   draggableviews: 0
   dynamic_page_cache: 0
