NBMARC-13-NBMCCL-23-Nextbet-Solid-Gaming-Integration

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
@@ -26,6 +26,9 @@ settings:
     -
       value: micro_gaming
       label: Microgaming
+    -
+      value: solid_gaming
+      label: 'Solid Gaming'
   allowed_values_function: ''
 module: options
 locked: false
