--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
@@ -23,6 +23,9 @@ settings:
     -
       value: micro_gaming
       label: Microgaming
+    -
+      value: solid_gaming
+      label: 'Solid Gaming'
   allowed_values_function: ''
 module: options
 locked: false
