--- a/web/sites/ptplus/config/sync/core.extension.yml
+++ b/web/sites/ptplus/config/sync/core.extension.yml
@@ -53,10 +53,12 @@ module:
   rdf: 0
   rest: 0
   rest_menu_items: 0
+  rest_views: 0
   restui: 0
   scheduler: 0
   serialization: 0
   shortcut: 0
+  svg_image: 0
   system: 0
   taxonomy: 0
   taxonomy_unique: 0
