update handler to streamhandler

--- a/web/modules/custom/webcomposer_monolog/webcomposer_monolog.services.yml
+++ b/web/modules/custom/webcomposer_monolog/webcomposer_monolog.services.yml
@@ -6,5 +6,5 @@ parameters:
 
 services:
   monolog.handler.file:
-    class: Monolog\Handler\RotatingFileHandler
-    arguments: ['/var/log/cms/drupal.log', '30', '200', false]
+    class: Monolog\Handler\StreamHandler
+    arguments: ['/var/log/cms/drupal.log']
