--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -22,6 +22,7 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_title
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_title_icon
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_type
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_provider_product
   module:
     - image
     - options
@@ -185,6 +186,14 @@ content:
     region: content
   field_game_type:
     weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_provider_product:
+    weight: 20
     label: above
     settings:
       link: true
