[DFPTPLUS-5] Added Config files for Slider integration

--- a/web/sites/ptplus/config/sync/field.field.taxonomy_term.floating_footer_tabs.field_active_icon_tab.yml
+++ b/web/sites/ptplus/config/sync/field.field.taxonomy_term.floating_footer_tabs.field_active_icon_tab.yml
@@ -14,7 +14,7 @@ bundle: floating_footer_tabs
 label: 'Active icon tab'
 description: 'icon for active tab'
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
