--- a/web/sites/ptplus/config/sync/field.field.taxonomy_term.floating_footer_tabs.field_icon_tab.yml
+++ b/web/sites/ptplus/config/sync/field.field.taxonomy_term.floating_footer_tabs.field_icon_tab.yml
@@ -6,14 +6,7 @@ dependencies:
     - field.storage.taxonomy_term.field_icon_tab
     - taxonomy.vocabulary.floating_footer_tabs
   module:
-    - content_translation
     - image
-third_party_settings:
-  content_translation:
-    translation_sync:
-      alt: alt
-      title: title
-      file: '0'
 id: taxonomy_term.floating_footer_tabs.field_icon_tab
 field_name: field_icon_tab
 entity_type: taxonomy_term
@@ -21,7 +14,7 @@ bundle: floating_footer_tabs
 label: 'Icon tab'
 description: 'icon for inactive tab'
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
