--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability.yml
@@ -14,7 +14,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'User Availability'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: partner_matrix
