--- a/web/sites/ptplus/config/sync/views.view.webcomposer_slider_ver2.yml
+++ b/web/sites/ptplus/config/sync/views.view.webcomposer_slider_ver2.yml
@@ -13,10 +13,10 @@ dependencies:
   module:
     - datetime
     - draggableviews
-    - image
     - options
     - rest
     - serialization
+    - svg_image
     - user
     - webcomposer_rest_extra
     - webcomposer_slider_v2
