--- a/web/sites/ptplus/config/sync/core.extension.yml
+++ b/web/sites/ptplus/config/sync/core.extension.yml
@@ -21,6 +21,7 @@ module:
   contextual: 0
   ctools: 0
   datetime: 0
+  desktop_slider: 0
   devel: 0
   draggableviews: 0
   dynamic_page_cache: 0
@@ -58,6 +59,7 @@ module:
   scheduler: 0
   serialization: 0
   shortcut: 0
+  slider_overlay: 0
   svg_image: 0
   system: 0
   taxonomy: 0
