--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_image.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_image.yml
@@ -5,15 +5,8 @@ dependencies:
   config:
     - field.storage.webcomposer_slider_v2_entity.field_banner_image
   module:
-    - content_translation
     - image
     - webcomposer_slider_v2
-third_party_settings:
-  content_translation:
-    translation_sync:
-      file: file
-      alt: '0'
-      title: '0'
 _core:
   default_config_hash: KaeWJJV3dlD-xtsBx9X17putfZSd_E0_fwdP2vlij1Y
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_image
@@ -23,7 +16,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Banner Image'
 description: 'Recommended dimension of image is 767px x 376px.'
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
