--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb.yml
@@ -16,9 +16,8 @@ bundle: webcomposer_slider_v2_entity
 label: 'Post Banner Blurb'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
 field_type: text_long
-
