--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_preview_display_only.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_preview_display_only.yml
@@ -15,7 +15,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Preview Display Only'
 description: 'Enable this field if you want the slider entry to be viewable on Preview Mode only.'
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 0
