--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_publish_date.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_publish_date.yml
@@ -16,7 +16,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Publish Date (optional)'
 description: "<p>If this is set the slider will be available from this date up until the date set on <strong>Unpublish Date</strong>.\r\n<br>Otherwise, the slider will be available upon saving.</p>"
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
