--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_status.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_status.yml
@@ -16,7 +16,7 @@ bundle: webcomposer_slider_v2_entity
 label: Status
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: '1'
