--- a/web/sites/ptplus/config/sync/core.entity_view_display.desktop_slider.desktop_slider.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.desktop_slider.desktop_slider.default.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.desktop_slider.desktop_slider.field_banner_blurb
     - field.field.desktop_slider.desktop_slider.field_banner_image
+    - field.field.desktop_slider.desktop_slider.field_banner_link
+    - field.field.desktop_slider.desktop_slider.field_banner_link_target
+    - field.field.desktop_slider.desktop_slider.field_content_position
     - field.field.desktop_slider.desktop_slider.field_currency
     - field.field.desktop_slider.desktop_slider.field_disable_in_tablet
     - field.field.desktop_slider.desktop_slider.field_log_in_state
@@ -13,10 +17,6 @@ dependencies:
     - field.field.desktop_slider.desktop_slider.field_post_banner_link
     - field.field.desktop_slider.desktop_slider.field_post_banner_link_target
     - field.field.desktop_slider.desktop_slider.field_post_content_position
-    - field.field.desktop_slider.desktop_slider.field_pre_banner_blurb
-    - field.field.desktop_slider.desktop_slider.field_pre_banner_link
-    - field.field.desktop_slider.desktop_slider.field_pre_banner_link_target
-    - field.field.desktop_slider.desktop_slider.field_pre_content_position
     - field.field.desktop_slider.desktop_slider.field_preview_display_only
     - field.field.desktop_slider.desktop_slider.field_publish_date
     - field.field.desktop_slider.desktop_slider.field_status
@@ -35,8 +35,15 @@ targetEntityType: desktop_slider
 bundle: desktop_slider
 mode: default
 content:
+  field_banner_blurb:
+    weight: 7
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_banner_image:
-    weight: 2
+    weight: 4
     label: above
     settings:
       svg_attributes:
@@ -48,8 +55,34 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_banner_link:
+    weight: 5
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
+  field_banner_link_target:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_content_position:
+    weight: 8
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_currency:
-    weight: 27
+    weight: 19
     label: above
     settings:
       link_to_entity: false
@@ -57,7 +90,7 @@ content:
     type: string
     region: content
   field_disable_in_tablet:
-    weight: 4
+    weight: 17
     label: above
     settings:
       format: default
@@ -67,28 +100,28 @@ content:
     type: boolean
     region: content
   field_log_in_state:
-    weight: 7
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_player_state:
-    weight: 28
+    weight: 20
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_post_banner_blurb:
-    weight: 9
+    weight: 13
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_post_banner_image:
-    weight: 10
+    weight: 14
     label: above
     settings:
       svg_attributes:
@@ -101,7 +134,7 @@ content:
     type: image
     region: content
   field_post_banner_link:
-    weight: 12
+    weight: 11
     label: above
     settings:
       trim_length: 80
@@ -113,54 +146,21 @@ content:
     type: link
     region: content
   field_post_banner_link_target:
-    weight: 13
+    weight: 12
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_post_content_position:
-    weight: 14
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_pre_banner_blurb:
-    weight: 8
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  field_pre_banner_link:
     weight: 15
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
-    region: content
-  field_pre_banner_link_target:
-    weight: 16
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_pre_content_position:
-    weight: 17
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_preview_display_only:
-    weight: 18
+    weight: 16
     label: above
     settings:
       format: default
@@ -170,7 +170,7 @@ content:
     type: boolean
     region: content
   field_publish_date:
-    weight: 19
+    weight: 9
     label: above
     settings:
       format_type: medium
@@ -179,14 +179,14 @@ content:
     type: datetime_default
     region: content
   field_status:
-    weight: 23
+    weight: 18
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_title:
-    weight: 24
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -194,7 +194,7 @@ content:
     type: string
     region: content
   field_unpublish_date:
-    weight: 25
+    weight: 10
     label: above
     settings:
       format_type: medium
