--- a/web/sites/ptplus/config/sync/field.field.desktop_slider.desktop_slider.field_banner_blurb.yml
+++ b/web/sites/ptplus/config/sync/field.field.desktop_slider.desktop_slider.field_banner_blurb.yml
@@ -1,14 +1,14 @@
-uuid: ba897b5f-2c59-4c53-91d0-016e52db0cac
+uuid: 8ccb2a73-fca8-46a4-9dd0-2300b3309bec
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.desktop_slider.field_pre_banner_blurb
+    - field.storage.desktop_slider.field_banner_blurb
   module:
     - desktop_slider
     - text
-id: desktop_slider.desktop_slider.field_pre_banner_blurb
-field_name: field_pre_banner_blurb
+id: desktop_slider.desktop_slider.field_banner_blurb
+field_name: field_banner_blurb
 entity_type: desktop_slider
 bundle: desktop_slider
 label: 'Per Banner Blurb'
