--- a/web/sites/ptplus/config/sync/field.field.desktop_slider.desktop_slider.field_content_position.yml
+++ b/web/sites/ptplus/config/sync/field.field.desktop_slider.desktop_slider.field_content_position.yml
@@ -1,14 +1,14 @@
-uuid: 6d6c5418-c6c8-4ad9-aca2-9e91b448eaa5
+uuid: 63b2fd20-bfb3-4eec-94a6-1b8e89383a28
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.desktop_slider.field_pre_content_position
+    - field.storage.desktop_slider.field_content_position
   module:
     - desktop_slider
     - options
-id: desktop_slider.desktop_slider.field_pre_content_position
-field_name: field_pre_content_position
+id: desktop_slider.desktop_slider.field_content_position
+field_name: field_content_position
 entity_type: desktop_slider
 bundle: desktop_slider
 label: 'Pre Content Position'
