--- a/web/sites/ptplus/config/sync/field.storage.desktop_slider.field_banner_link.yml
+++ b/web/sites/ptplus/config/sync/field.storage.desktop_slider.field_banner_link.yml
@@ -1,16 +1,16 @@
-uuid: 4d826ca8-8449-476b-a814-50311b3aa392
+uuid: ee44c191-8443-4a97-a025-41627878cf42
 langcode: en
 status: true
 dependencies:
   module:
     - desktop_slider
-    - text
-id: desktop_slider.field_pre_banner_blurb
-field_name: field_pre_banner_blurb
+    - link
+id: desktop_slider.field_banner_link
+field_name: field_banner_link
 entity_type: desktop_slider
-type: text_long
+type: link
 settings: {  }
-module: text
+module: link
 locked: false
 cardinality: 1
 translatable: true
