--- a/web/sites/ptplus/config/sync/field.storage.desktop_slider.field_content_position.yml
+++ b/web/sites/ptplus/config/sync/field.storage.desktop_slider.field_content_position.yml
@@ -1,12 +1,12 @@
-uuid: a74b0b6b-4800-47c8-af0f-92f00e91660b
+uuid: b5ea71a6-f38f-42d5-996b-e7d45cbd5faa
 langcode: en
 status: true
 dependencies:
   module:
     - desktop_slider
     - options
-id: desktop_slider.field_pre_content_position
-field_name: field_pre_content_position
+id: desktop_slider.field_content_position
+field_name: field_content_position
 entity_type: desktop_slider
 type: list_string
 settings:
