--- a/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
@@ -4,24 +4,52 @@ status: true
 dependencies:
   config:
     - field.field.node.ptplus.body
+    - field.field.node.ptplus.field_game_code
+    - field.field.node.ptplus.field_games_list_category
+    - field.field.node.ptplus.field_thumbnail_image
     - node.type.ptplus
   module:
-    - text
+    - svg_image
     - user
 id: node.ptplus.default
 targetEntityType: node
 bundle: ptplus
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
+  field_game_code:
+    weight: 1
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
+  field_games_list_category:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_thumbnail_image:
+    weight: 4
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  body: true
   langcode: true
