--- a/web/sites/ptplus/config/sync/core.entity_view_display.taxonomy_term.floating_footer_tabs.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.taxonomy_term.floating_footer_tabs.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.taxonomy_term.floating_footer_tabs.field_active_icon_tab
     - field.field.taxonomy_term.floating_footer_tabs.field_icon_tab
     - field.field.taxonomy_term.floating_footer_tabs.field_label_tab
+    - field.field.taxonomy_term.floating_footer_tabs.field_page_url
     - field.field.taxonomy_term.floating_footer_tabs.field_status_tab
     - taxonomy.vocabulary.floating_footer_tabs
   module:
@@ -24,7 +25,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_active_icon_tab:
-    weight: 2
+    weight: 3
     label: above
     settings:
       image_style: ''
@@ -37,7 +38,7 @@ content:
     type: image
     region: content
   field_icon_tab:
-    weight: 1
+    weight: 2
     label: above
     settings:
       image_style: ''
@@ -50,7 +51,15 @@ content:
     type: image
     region: content
   field_label_tab:
-    weight: 3
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_page_url:
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -58,7 +67,7 @@ content:
     type: string
     region: content
   field_status_tab:
-    weight: 4
+    weight: 5
     label: above
     settings:
       format: default
