--- a/web/sites/mobile-games/config/sync/core.extension.yml
+++ b/web/sites/mobile-games/config/sync/core.extension.yml
@@ -47,6 +47,7 @@ module:
   menu_link_attributes: 0
   menu_ui: 0
   metatag: 0
+  monolog: 0
   node: 0
   options: 0
   paragraphs: 0
@@ -90,6 +91,7 @@ module:
   webcomposer_language_access: 0
   webcomposer_language_hierarchy: 0
   webcomposer_marketing_script: 0
+  webcomposer_monolog: 0
   webcomposer_promotions: 0
   webcomposer_registration_landing_page: 0
   webcomposer_replicate_utility: 0
