--- a/web/sites/mobile-live-dealer/config/sync/core.extension.yml
+++ b/web/sites/mobile-live-dealer/config/sync/core.extension.yml
@@ -45,6 +45,7 @@ module:
   menu_link_attributes: 0
   menu_ui: 0
   metatag: 0
+  monolog: 0
   node: 0
   options: 0
   paragraphs: 0
@@ -84,6 +85,7 @@ module:
   webcomposer_games_list: 0
   webcomposer_language_hierarchy: 0
   webcomposer_marketing_script: 0
+  webcomposer_monolog: 0
   webcomposer_optimized_rest: 0
   webcomposer_promotions: 0
   webcomposer_registration_landing_page: 0
