--- a/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
@@ -5,7 +5,9 @@ dependencies:
   config:
     - field.field.node.ptplus.body
     - field.field.node.ptplus.field_game_code
+    - field.field.node.ptplus.field_game_ribbon
     - field.field.node.ptplus.field_games_list_category
+    - field.field.node.ptplus.field_keywords
     - field.field.node.ptplus.field_thumbnail_image
     - node.type.ptplus
   module:
@@ -24,6 +26,14 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_game_ribbon:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_games_list_category:
     weight: 3
     label: above
@@ -31,6 +41,13 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_keywords:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
   field_thumbnail_image:
     weight: 4
