--- a/web/sites/ptplus/config/sync/core.entity_form_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.node.ptplus.default.yml
@@ -6,12 +6,14 @@ dependencies:
     - field.field.node.ptplus.body
     - field.field.node.ptplus.field_game_code
     - field.field.node.ptplus.field_game_ribbon
+    - field.field.node.ptplus.field_game_thumbnail_big
     - field.field.node.ptplus.field_games_list_category
     - field.field.node.ptplus.field_keywords
     - field.field.node.ptplus.field_thumbnail_image
     - image.style.thumbnail
     - node.type.ptplus
   module:
+    - conditional_fields
     - path
     - scheduler
     - svg_image
@@ -23,7 +25,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 11
     settings:
       rows: 9
       summary_rows: 3
@@ -32,12 +34,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_game_code:
-    weight: 124
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -45,19 +47,43 @@ content:
     type: string_textfield
     region: content
   field_game_ribbon:
-    weight: 126
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_games_list_category:
-    weight: 122
-    settings: {  }
+  field_game_thumbnail_big:
+    weight: 16
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
+    type: image_image
+    region: content
+  field_games_list_category:
+    weight: 12
+    settings: {  }
+    third_party_settings:
+      conditional_fields:
+        f377cbd9-0ba7-4e4c-b846-4df591de089c:
+          dependee: field_game_tile_image_size
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form: null
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: node
+          bundle: ptplus
     type: options_buttons
     region: content
   field_keywords:
-    weight: 127
+    weight: 18
     settings:
       rows: 2
       placeholder: ''
@@ -65,23 +91,24 @@ content:
     type: string_textarea
     region: content
   field_thumbnail_image:
-    weight: 125
+    weight: 15
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
-    third_party_settings: {  }
+    third_party_settings:
+      conditional_fields: {  }
     type: image_image
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -89,12 +116,12 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 5
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 30
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -102,32 +129,32 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 10
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -136,7 +163,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 30
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
