--- a/web/sites/ptplus/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.games_category.field_game_tile_image_size
     - field.field.taxonomy_term.games_category.field_games_alias
     - field.field.taxonomy_term.games_category.field_games_category_logo
     - field.field.taxonomy_term.games_category.field_publish_date
@@ -12,7 +13,6 @@ dependencies:
   module:
     - datetime
     - field_group
-    - path
     - svg_image
     - text
 third_party_settings:
@@ -23,7 +23,7 @@ third_party_settings:
         - description
         - field_unpublish_date
       parent_name: ''
-      weight: 7
+      weight: 4
       format_type: details
       format_settings:
         id: ''
@@ -44,6 +44,12 @@ content:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
+  field_game_tile_image_size:
+    weight: 11
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_games_alias:
     weight: 1
     settings:
@@ -53,7 +59,7 @@ content:
     type: string_textfield
     region: content
   field_games_category_logo:
-    weight: 6
+    weight: 3
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -74,7 +80,7 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 3
+    weight: 2
     region: content
     settings:
       include_locked: true
@@ -87,15 +93,10 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   translation:
     weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  path: true
