--- a/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.ptplus.body
     - field.field.node.ptplus.field_game_code
     - field.field.node.ptplus.field_game_ribbon
+    - field.field.node.ptplus.field_game_thumbnail_big
     - field.field.node.ptplus.field_games_list_category
     - field.field.node.ptplus.field_keywords
     - field.field.node.ptplus.field_thumbnail_image
@@ -34,8 +35,21 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_game_thumbnail_big:
+    weight: 4
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_games_list_category:
-    weight: 3
+    weight: 2
     label: above
     settings:
       link: true
@@ -50,7 +64,7 @@ content:
     type: basic_string
     region: content
   field_thumbnail_image:
-    weight: 4
+    weight: 3
     label: above
     settings:
       svg_attributes:
