--- a/web/sites/ptplus/config/sync/field.field.node.ptplus.field_game_thumbnail_big.yml
+++ b/web/sites/ptplus/config/sync/field.field.node.ptplus.field_game_thumbnail_big.yml
@@ -1,19 +1,19 @@
-uuid: aa61ee8c-eae0-44a9-a187-3578e43244d1
+uuid: c6d0146c-e63e-489f-b269-d4fa01a1bb47
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_thumbnail_image
+    - field.storage.node.field_game_thumbnail_big
     - node.type.ptplus
   module:
     - image
-id: node.ptplus.field_thumbnail_image
-field_name: field_thumbnail_image
+id: node.ptplus.field_game_thumbnail_big
+field_name: field_game_thumbnail_big
 entity_type: node
 bundle: ptplus
-label: 'Thumbnail Image'
-description: 'Recommended dimension of image is 110px x 86px.'
-required: true
+label: 'Thumbnail Image Big'
+description: 'Recommended dimension of image is 139px x 86px. '
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -24,7 +24,7 @@ settings:
   max_resolution: ''
   min_resolution: ''
   alt_field: true
-  alt_field_required: false
+  alt_field_required: true
   title_field: false
   title_field_required: false
   default_image:
