--- a/web/sites/ptplus/config/sync/field.field.taxonomy_term.floating_footer_tabs.field_label_tab.yml
+++ b/web/sites/ptplus/config/sync/field.field.taxonomy_term.floating_footer_tabs.field_label_tab.yml
@@ -12,7 +12,7 @@ bundle: floating_footer_tabs
 label: 'Label tab'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
