--- a/web/sites/ptplus/config/sync/language.content_settings.taxonomy_term.lobby_tab.yml
+++ b/web/sites/ptplus/config/sync/language.content_settings.taxonomy_term.lobby_tab.yml
@@ -1,5 +1,5 @@
-uuid: 9908ae01-55b3-423a-adc9-0ffde63cc95c
-langcode: en
+uuid: c1bf334e-2737-4dbe-9d6f-233ac5543061
+langcode: zh-hans
 status: true
 dependencies:
   config:
@@ -13,4 +13,4 @@ id: taxonomy_term.lobby_tab
 target_entity_type_id: taxonomy_term
 target_bundle: lobby_tab
 default_langcode: site_default
-language_alterable: true
+language_alterable: false
