--- a/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
@@ -14,3 +14,9 @@ master_placeholder: 0
 master_placeholder_message: 'Term @term already exists in vocabulary @vocabulary.'
 floating_footer_tabs: 1
 floating_footer_tabs_message: 'Term @term already exists in vocabulary @vocabulary.'
+games_ribbons: 0
+games_ribbons_message: 'Term @term already exists in vocabulary @vocabulary.'
+lobby_tab: 0
+lobby_tab_message: 'Term @term already exists in vocabulary @vocabulary.'
+game_tile_image_size: 0
+game_tile_image_size_message: 'Term @term already exists in vocabulary @vocabulary.'
