updated provider product config

--- a/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_provider_product.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_provider_product.yml
@@ -1,5 +1,5 @@
-uuid: 4c3d452b-ebfa-493b-a341-fd64c629c6a2
-langcode: ja
+uuid: ea010d97-703c-4aee-af92-5844964116a7
+langcode: en
 status: true
 dependencies:
   module:
