--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_mobile_games_entity.zipang_mobile_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_mobile_games_entity.zipang_mobile_games_entity.default.yml
@@ -38,7 +38,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 11
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -50,7 +50,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 12
+      weight: 13
       format_type: fieldset
       format_settings:
         id: ''
@@ -63,7 +63,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 14
+      weight: 15
       format_type: fieldset
       format_settings:
         id: ''
@@ -76,7 +76,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 15
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -92,7 +92,7 @@ bundle: zipang_mobile_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -170,7 +170,7 @@ content:
     type: string_textfield
     region: content
   field_game_description:
-    weight: 16
+    weight: 17
     settings:
       rows: 9
       summary_rows: 3
@@ -277,13 +277,10 @@ content:
     type: options_select
     region: content
   field_provider_product:
-    weight: 18
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 11
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   langcode:
     type: language_select
